# salary-management-tool

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 28d5e70d4d2b_add_employee_documents_table.py  333403a6aea2_swap_employees_department_to_fk.py  84424f27b974_baseline.py  bf4d71d16c88_add_departments_table.py  (+3 more)
backend/app/: main.py
backend/seed/: __main__.py  first_names.txt  generator.py  last_names.txt  runner.py
backend/tests/: conftest.py  test_admin_users_create.py  test_admin_users_list.py  test_admin_users_update.py  test_auth_dependencies.py  test_auth_login.py  test_auth_me.py  test_countries_catalog.py  test_department_model.py  test_departments_create.py  test_departments_list.py  test_departments_update.py  test_employee_document_model.py  test_employee_documents_delete.py  test_employee_documents_download.py  test_employee_documents_list.py  test_employee_documents_upload.py  test_employee_model.py  test_employees_create.py  test_employees_delete.py  test_employees_detail.py  test_employees_export_csv.py  test_employees_list.py  test_employees_list_filters_sort.py  test_employees_update.py  test_insights_overview.py  test_insights_salary_by_country.py  test_insights_salary_by_department.py  test_insights_salary_by_job_title.py  test_insights_tenure_anniversaries.py  test_insights_tenure_by_department.py  test_seed_generator.py  test_seed_runner.py  test_timestamps_utc.py  test_user_model.py
(+73 files in other folders)
