[project]
name = "salary-management-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "psycopg[binary]>=3.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
